Closed Bug 133130 Opened 24 years ago Closed 23 years ago

Mail notifier tray icon stay after reading incoming mail.

Categories

(SeaMonkey :: MailNews: Message Display, defect, P1)

x86
Windows XP
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: fredbezies, Assigned: mscott)

References

Details

(Whiteboard: [adt1])

Attachments

(3 files)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:0.9.9+) Gecko/20020323 BuildID: 2002032320 When I have some mails, the tray icon said to me I had "3 mails" (for example). After having marking them read, tray icon doesn't disappear. Reproducible: Always Steps to Reproduce: 1.Get new mails 2.Read them all Actual Results: Tray icon won't disappear ! :-( Expected Results: Tray icon must disappear.
Here you can see that there is no unread mail (no green arrow on accounts lines), and the notifier icon stay down in the tray bar. Screenshot made with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:0.9.9+) Gecko/20020325
More information. I have 4 mails account, and when I receive some mails on an account other than main account, icon disappear after reading mail. Maybe this may help in order to understand what really happens.
over to mscott who I think imlemented all this.
Assignee: naving → mscott
*** Bug 133878 has been marked as a duplicate of this bug. ***
I see this too, build 2002032708 Win2k. Changing component (hope it's correct) as I'm using IMAP. I think this should be fixed in 1.0. Btw, I like the old behavior _so_ much (where the icon would disappear when I read something, possibly leaving something unread).
Status: UNCONFIRMED → NEW
Component: Networking - POP → Mail Window Front End
Ever confirmed: true
Target Milestone: --- → mozilla1.0
Another note: It sometimes works correctly and sometimes not. Don't now yet why.
*** Bug 133765 has been marked as a duplicate of this bug. ***
changing myself to qa.. i tried commercial trunk 2002040103 on Nt 4.0 and Xp and this works for me. Did not try multiple accounts yet...
QA Contact: sheelar → gchan
Not working for me, 2002040203, Win2K, single account, turbo mode.
*** Bug 134131 has been marked as a duplicate of this bug. ***
Please update this bug with an [adt1] - [adt3] impact rating (or take it off the list if it doesn't even rate adt3.) Thanks!
This is a weird bug. When mailnews is started and new mail has arrived: First an envelope icon flickers like mad in the system tray. Then it turns into something looking like a dogs head with a red top-hat, and that one stays. The envelope pic is nice looking. But the white thing with that "detonator" button on top is... very strange? Is it distorted? It doesn't even vageuly resemble an envelope. It doesn't look like a mailbox/biff icon either.
For people who are seeing this problem (i am unable to reproduce): Can you give us details on your mail acount/installation? new/migrated profile? Imap/pop/webmail? Do you have more than one mail account set up? Are biff settings for each mail account same/different? OS? Myself: I do clean install of daily trunk build (ie I uninstall previous version, remove mozver.dat file). I install latest trunk build. I've tried migrating an old profile or creating a new one. I set my biff setting ('Check for new messages every x minutes'), I quit/restart mozilla. Then I test sending/receving mail and wait for notification icon to appear. When I see it, I click on the new mesg, and the icon dissapears on syst tray. Tried multiple mail accounts, tried installing a newer trunk build over previous trunk build, migrated/new profiles, and I can't see this on NT 4.0 or Win2k.
I used to see this, but I think it went away a few days ago. Nothing changed on my side though. Maybe someone checked in something in the last few days that made it go away
It doesn't happen all the time for me either. gchan: Clean install trunk build. New profile. Two POP accounts, both with same biff settings.
I see this everytime I get new mail. I have 2 mail accounts, each with the same biff settings. I have to close all Mozilla windows for it to go away.
this still happens on a build i downloaded 1 hour ago.. but it seems to be related to Quick Launch.. after i disabled it, the icon goes away after reading a mail. i used to have it there all the time with QuickLauch enabled...
I've had quicklaunch disabled since installation and have still had the problem.
Agree with comment #17. On two Win2K systems, I almost always see the issue on the one with the turbo option enabled. Both with single pop3 account, biff and automatic retrieval enabled.
I have one POP account set up. The profile is around 10 days old on a fresh installation of XP. I don't use quicklaunch. Mail related settings in prefs: "When new mail arrives" both "play a sound" and "show an alert" are checked. In "Mail & Newsgroups Account Settings", "Server Settings" these are checked: check for new mail at startup check for new mail every 10 minutes Automatically download any new messages
Using Build 2002040203 on WinXP, one mail account, Norton Anti-virus enabled (POPROXY), 3 pane Mail window, try this: Have at least 2 new messages in Inbox. (popup new mail has fired, new mail flag shows in system tray). Move one message to a folder, after you read it. The second message (now the only one in Inbox) is displayed and read. Error: at this point, I still see the system tray new mail flag, also, the flyover help on the system tray flag reads bkaiser/mail.vonl.com has 2 new messages(!?). I delete the message, the new mail system tray flag remains. Attempting to resynch with server by Get Messages returns "There are no new messages on the server.". The new mail system tray flag remains (2 new messages). (Would be nice if Get Messages was implemented as a resynch for the new mail flag.) Now, if I get a new message(s) and read the message, the flag disappears.... When I try to reproduce using first steps, new mail flag disappears when select first message. Unable to reproduce a second time.... Maybe this will help you figure out where to look.
One more time. (Same configuration as in comment #21). Try this: New message arrives. Pop-up window displays (You have # new messages...) Click on message in Inbox (read it) BEFORE the new message flag displays in the system tray. New message flag remains in system tray. Get message does not clear the flag. If another message arrives (system tray flag is still showing), clicking on the message and reading it will clear the system tray flag (as expected). Operation appears to return to normal.
Thanks Bob. Confirmed on commercial trunk 2002040803 on win2k, using steps provided by Bob in comment 22. If a new mesg arrives, you click on it/read it before it pops up in the system tray, then the icon will stay in the system tray until a new mesg arrives. I think that's one way to reproduce this problem. I just don't know if the majority of people reporting this problem are doing this or if we follow Bob's steps and it gets fixed, will this solve everyone's else problem? Still investigating turbo thing but haven't seen turbo as the cause..
Yes, same here. Although I hate to chip in with 'me too' comments (they usually only cause spam).
I'm having this problem WHENEVER new mail arrives, regardless of whether I read it before or after it pops up in the system tray. Build 2002032603 on Windows XP, clean install, two POP accounts with same biff settings.
Tried steps in comment 25 w/2002040803 on NT 4.0 and I couldn't reproduce. Had 2 pop accounts w/same biff setting and every time I got a new mesg and read it, the notification icon went away. Tried w/turbo mode on in 2002040403 on win2k and I couldnt reproduce either. Tried single/multiple acnts and cant make the notification icon stay in system tray after reading new mesgs.
Win 95 OSR2, Moz 0.9.9+ 20020405 The bug cannot be reproduced anymore with this nighlty.
Well, I think I have some info that might help you. First, I retract that it is related to turbo mode. After disabling quicklaunch on the machine that exhibits the problem, the issue is still there. What I see now is the following: 1. Biff notifies me there is one or more new messages (pop-up and tray icon). 2. I wait for the pop-up to close. Then, I preview the new messages. Tray icon doesn't disappear (this is the bug we are discussing)). 3. From now on, every time I double click on tray icon (until I restart Mozilla), I see the following error in javascript console: Error: [Exception... "Component returned failure code: 0x80004002 (NS_NOINTERFACE) [nsISupports.QueryInterface]" nsresult: "0x80004002 (NS_NOINTERFACE)" location: "JS frame :: chrome://messenger/content/msgMail3PaneWindow.js :: EnsureAllAncestorsAreExpanded :: line 1160" data: no] Source File: chrome://messenger/content/msgMail3PaneWindow.js Line: 1160
Forgot to note I use 2002040903 on Win2K, pop3. The bug is still alive.
Attached image screenshot, 300x zoom —
Regarding comment 12: zoomed in picture of creature in taskbar
I also see this. Must-fix since it makes biff useless.
Keywords: nsbeta1
Keywords: nsbeta1
readding nsbeta1 for Blake. It was removed by the last cc'er ps Blake you have any steps to reproduce?
Keywords: nsbeta1
It seems arbitrary to me. The majority of the time it just doesn't go away after I check my mail. And since I'm an idiot, I'll keep checking my mail every few minutes because I think I have new mail. I'll try to look for certain conditions under which it's reproducible. FYI, I just have a normal IMAP account with nsmail-1 as the server, like most other netscape'rs.
I have been seeing this too. Still looking into trying to get a scenario to reproduce it regularly. accepting.
Status: NEW → ASSIGNED
With build 2002041003 I'm suddenly not getting this problem. Now the new mail tray icon goes away when I start to read my new mail, which is great! Is it supposed to wait until I have no unread messages or just go away as soon as I start reading new mail?
Right I've been playing with this one a bit: The crux of the problem is the reading of new mail BEFORE the popup toaster has disappeared. If this occurs the biff status (#define IDI_MAILBIFF 101) seems to be left in limbo and stays on the systray. If you then send another email to yourself, wait for the popup to pop-up and then disappear and then read the new mail, the systray icon is removed (from limbo :) ) From my bumblings through the code, (I'm new to this) I think that maybe nsMessengerWinIntegration::OnItemPropertyFlagChanged does not have the oppertunity to be called when the popup toaster is active. I may be really far out I this one, but it's just an idea.
I know the MSN Messenger inspired alert / toaster looks neat-o, but I was happy with a small icon that worked. If I read my mail before said alert goes away the icon remains until I restart mozilla. I am using windows 2000 with build 2002041111 from the latest 1.0.0 directory. Severity should be augmented to critical. This is beyond annoying and impacts the users functionailty.
No longer getting error with new nightly 2002041003, WinXP, two POP with same biff.
*** Bug 137345 has been marked as a duplicate of this bug. ***
I don't understand why this is still going on? Can't someone back out the change that started this? Everyday there are at least 4 or 5 dups filed and proceeded with someone marking it as a dup of this bug..
Bug still occurs. Build 2002041306, Windows 2000 - from nightlies latest 1.0.0 directory.
For those who see this, this is pretty visible and since this is a new feature we should try to get it right.
Keywords: nsbeta1nsbeta1+
Priority: -- → P1
Whiteboard: [adt1]
Attached patch the fix — — Splinter Review
This patch fixes this problem. It protects against the scenario where the user reads a new message before the alert has gone away.
It may not be clear from the diff but mAlertInProgress is getting cleared in the alert callback method: nsMessengerWinIntegration::OnAlertFinished
Blocks: 134745
Attachment #79308 - Flags: review+
Comment on attachment 79308 [details] [diff] [review] the fix r=bhuvan
Comment on attachment 79308 [details] [diff] [review] the fix sr=bienvenu
Attachment #79308 - Flags: superreview+
Please check this into the trunk and when it's been tested, update the bug.
this went into the trunk earlier tonight.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Keywords: adt1.0.0
Resolution: --- → FIXED
This really needs to go on the branch, no?
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
changing back to fixed. Branch bugs are managed with the "fixed1.0.0" and "verified1.0.0" keywords. The adt1.0.0 keyword and emailing drivers for approval keeps this on the branch radar.
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
Unable to reproduce problem as of build 2002041603 for scheduled new mail checks. Tested on WinXP, one POP. Question: Is new mail notification suppressed by design when you run Get Messages manually? Currently, 0.9.9 and this build do not show the popup or the flag when I click Get Messages and new mail appears.
Yup, new mail notification is suppressed by design when you click the get Msgs button. It would be extremely annoying if you got an animated alert and a biff icon every time you had new mail when you clicked the Get New Mail button. So that suppression is by design. Thanks for helping us test this fix on the trunk!
Using commercial trunk 2002-04-16-06-trunk (2002041603) on NT, 2k, and win98 this looks fixed to me. The only successful steps to reproduce is in comment 22 and after trying that, the icon dissapears. In previous testing this bug, I wasn't successful in finding any other scenarios that reproduced this problem so I hope what I did was good enough. I tried other steps (2 accounts w/same/different biff setings, differnt mail (pop/imap), one account, etc..) and the icon dissapears once you click on the new mesg or on a folder w/in that account. Tried filters that was ok to. So for now saying verified on trunk (hopefully other mozilla users will confirm).
adt1.0.0+ on behalf of the adt. Please check into the branch today and add fixed1.0.0 in the keyword field.
Keywords: adt1.0.0adt1.0.0+
Comment on attachment 79308 [details] [diff] [review] the fix a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #79308 - Flags: approval+
*** Bug 138485 has been marked as a duplicate of this bug. ***
*** Bug 138464 has been marked as a duplicate of this bug. ***
fixed on the 1.0 branch.
Keywords: adt1.0.0+fixed1.0.0
*** Bug 138770 has been marked as a duplicate of this bug. ***
Marking verified since this was verified to be fixed on the trunk. I will be doing the branch verification shortly (by marking verified1.0.0 in the keyword field).
Status: RESOLVED → VERIFIED
Using comment 22 as my testcase, and some additional ad-hoc, I can't get the mail notification icon to remain once I've read a new message. Tried this with build: 2002-04-20-06 on OSs: Windows XP, Windows NT 4.0, Windows 98 and Windows 2000. Verified FIXED on branch and trunk, so replacing fixed1.0.0 keyword with verified1.0.0
*** Bug 139301 has been marked as a duplicate of this bug. ***
*** Bug 139234 has been marked as a duplicate of this bug. ***
*** Bug 139259 has been marked as a duplicate of this bug. ***
*** Bug 139543 has been marked as a duplicate of this bug. ***
*** Bug 139705 has been marked as a duplicate of this bug. ***
*** Bug 139761 has been marked as a duplicate of this bug. ***
*** Bug 140619 has been marked as a duplicate of this bug. ***
*** Bug 140824 has been marked as a duplicate of this bug. ***
*** Bug 140843 has been marked as a duplicate of this bug. ***
*** Bug 141517 has been marked as a duplicate of this bug. ***
*** Bug 141540 has been marked as a duplicate of this bug. ***
*** Bug 141891 has been marked as a duplicate of this bug. ***
*** Bug 142038 has been marked as a duplicate of this bug. ***
*** Bug 143339 has been marked as a duplicate of this bug. ***
Win2K SP3 Moz 20022081419 The unread mail icon in the taskbar doesn't go away until I've selected the inbox of the account where the mail originally arrived. Since Since I filter my messages into various folders in my Local Folders and read them there, I must access the empty inbox specifically to make the taskbar icon go away. The account icon behaves in the same way. The little green arrow only goes away by accessing the inbox. r. vva
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
vva, that is bug 116181. reresolving as fixed.
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
and verified (again).
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: