Bug #133130 --> fix a race condition that caused the notification icon to never go away.

Bug #135753 --> figure out the folder to select when the user clicks on the
animated alert to ensure that we select the right folder.

Bug #123104 --> fix an inaccuracy in the new mail count. Always reset to 0
if we discover we have no new mail even if the state has already been changed
that way.

r=naving, sr=bienvenu/sspitzer
a=asa